Minor dark mode styling fixes (#57)
* dark mode clean list fix

* dark mode table fix

--- a/Horizontal/wwwroot/css/dark-mode.css
+++ b/Horizontal/wwwroot/css/dark-mode.css
@@ -64,9 +64,18 @@ html.dark-theme .full-article__footing-nav strong {
     color: white;
 }
 
+html.dark-theme ul.clean-list li,
+html.dark-theme .table td {
+    color: #d9d9d9;
+}
+
+html.dark-theme .table th,
+html.dark-theme .table tfoot td {
+    color: white;
+}
 
 @media (hover: hover) {
-    html.dark-theme nav.side-navbar li > i.fa-chevron-right:hover {
+    html .dark-theme nav.side-navbar li > i.fa-chevron-right:hover {
         cursor: pointer;
         color: #f13544;
     }
